Tried jqx range slider, not so performent... now it's time for jQRangeSlider

--- a/Control/src/main/resources/public/index.html
+++ b/Control/src/main/resources/public/index.html
@@ -5,12 +5,13 @@
     <title>Stocks</title>
     <link href="css/general.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/ion.rangeSlider.css" />
     <link rel="stylesheet" href="css/ion.rangeSlider.skinFlat.css" />
+
+    <link rel="stylesheet" href="http://jqwidgets.com/public/jqwidgets/styles/jqx.base.css"/>
+    <link rel="stylesheet" href="css/jqx.metrodark.css"/>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
-
 
 <body class="body">
 <div id="app">
@@ -38,11 +39,10 @@
     </div>
 </div>
 
-
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="dist/jQDateRangeSlider-withRuler-min.js"></script>
 <script src="dist/bundle.js"></script>
 
 </body>
-
 
 </html>
