--- a/Control/src/main/resources/public/index.html
+++ b/Control/src/main/resources/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Stocks</title>
     <link href="css/general.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/iThing.css" />
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/iThing.css"/>
 
     <link rel="stylesheet" href="http://jqwidgets.com/public/jqwidgets/styles/jqx.base.css"/>
     <link rel="stylesheet" href="css/jqx.metrodark.css"/>
@@ -14,36 +14,15 @@
 </head>
 
 <body class="body">
-<div id="app">
-    <div class="menuContainer">
-        <ul class="menu-list w-list-unstyled">
-            <li class="menu-item">
-                <h1 class="menu-text">Stocks</h1>
-            </li>
-        </ul>
-    </div>
-    <div id="contentContainer">
-        <div id="stockListContainer" class="bordered">
-            <stocks-list></stocks-list>
-        </div>
-        <stock-container inline-template>
-            <div id="rightContent">
-                <div class="bordered" id="topContent">
-                    <stock-info :stock="stock"></stock-info>
-                </div>
-                <div class="bordered" id="bottomContent">
-                    <stock-chart :stock="stock"></stock-chart>
-                </div>
-            </div>
-        </stock-container>
-    </div>
-</div>
+
+<div id="app"></div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="dist/jquery-ui.js"></script>
 <script type="text/javascript" src="dist/jquery.mousewheel.min.js"></script>
 <script type="text/javascript" src="dist/jQAllRangeSliders-min.js"></script>
 <script type="text/javascript" src="dist/jQAllRangeSliders-withRuler-min.js"></script>
+<script type="text/javascript" src="dist/canvasjs.min.js"></script>
 <script src="dist/bundle.js"></script>
 
 </body>
